Bug fix: slide toggle clipped content
The slide toggle directive was clipping content on page resizes. This
fixes the problem by using a bit more JS to set the max-height property
to inherit after the animation is complete. This also fixes a bug where
the height of the content needed to always be saved. Now the height is
calculated by added an extra 'slide-wrapper' div within the slide-toggle
div to keep track of the height for us.

--- a/app/scss/ept/_ept.scss
+++ b/app/scss/ept/_ept.scss
@@ -819,7 +819,7 @@ table.striped {
 .profile-avatar-container { width: 100%; text-align: center; img { height: 12.5rem; width: auto; } }
 
 .slide {
-  @include transition(500ms cubic-bezier(0.075, 0.82, 0.165, 1) all);
+  @include transition(300ms cubic-bezier(0.075, 0.82, 0.165, 1) all);
   overflow: hidden;
   &.open { opacity: 1; }
   &.closed { opacity: 0; max-height: 0; }
@@ -897,6 +897,7 @@ table.striped {
   }
   // poll edit section
   .poll-edit {
+    max-height: 0;
     background-color: #eee;
     &.open { margin-bottom: 1rem; }
     .poll-edit-container { padding: 1rem; overflow: hidden; }
